# jogo-da-forca

./: README.md  code_of_conduct.md  pyproject.toml
.github/workflows/: python.yml
cod/: forc.py
docs/: contributing.md  manual.md
tests/: palavras.txt  test_forca.py
